# tatlin_tape

./: .gitignore  CMakeLists.txt  README.md
checker/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  main.cpp
core/include/: all.hpp  configuration.hpp  exceptions.hpp  sorter.hpp  tape_processer.hpp  tempfile.hpp
core/src/: configuration.cpp  exceptions.cpp  sorter.cpp  tape_processer.cpp  tempfile.cpp
generator/: CMakeLists.txt  main.cpp
libs/: json.hpp
samples/configs/: big.json  billy.json  incomplete.json  numbers.json  wrong.json  zeros.json
samples/tapes/: doubles  generated_tape  not-int.txt  numbers.txt  result
test/: CMakeLists.txt  tests.cpp
